# approximate-equality

./: approximate-equality.cabal  approximate-equality.leo  approximately-equal.cabal  qpproximate-equality.cabal  test.hs
.leo_shadow/: xapproximate-equality.cabal  xtest.hs
Data/Eq/: Approximate.hs
Data/Eq/.leo_shadow/: xApproximate.hs
