Name:                approximate-equality
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcross@phys.washington.edu>
Stability:           Provisional
Synopsis:            Newtype wrappers for approximate equality
Description:         Approximate equality testing
Cabal-version:       >=1.2.3
Build-type:          Simple
Category:	     Type System,Data

Library
    Build-depends:   base >= 3 && < 5,
                     type-level-natural-number >= 1.0 && < 1.1
    Exposed-modules: Data.Eq.Approximate
